--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -205,7 +205,7 @@ jobs:
             fi
 
       - run:
-          name: Create armada release
+          name: Create earthfast release
           working_directory: ~/project/repository
           command: |
             # Check if we're using the default repository
@@ -236,16 +236,16 @@ jobs:
             echo "Listing current directory contents:"
             ls -la
 
-            bundle_filename="$(npx --package=earthfast-cli@0.6.0 --yes armada bundle create armada-bundle .)"
-            checksum="$(npx --package=earthfast-cli@0.6.0 --yes armada bundle checksum $bundle_filename)"
+            bundle_filename="$(npx --package=earthfast-cli@0.6.0 --yes earthfast bundle create earthfast-bundle .)"
+            checksum="$(npx --package=earthfast-cli@0.6.0 --yes earthfast bundle checksum $bundle_filename)"
             echo $checksum > ~/project/repository/checksum
             echo "Bundle Filename: $bundle_filename"
             echo "Checksum: $checksum"
-            mv armada-bundle.tgz ~/project/armada-bundle.tgz
+            mv earthfast-bundle.tgz ~/project/earthfast-bundle.tgz
 
       # store artifacts in circleci for download
       - store_artifacts:
-          path: armada-bundle.tgz
+          path: earthfast-bundle.tgz
       - store_artifacts:
           path: ~/project/repository/checksum
       - run:
@@ -263,7 +263,7 @@ jobs:
             if [ -f "$CHECKSUM_PATH" ]; then
               CHECKSUM=$(cat "$CHECKSUM_PATH")
               STATUS="success"
-              BUNDLE_URL="https://output.circle-artifacts.com/output/job/${CIRCLE_WORKFLOW_JOB_ID}/artifacts/${CIRCLE_NODE_INDEX}/armada-bundle.tgz"
+              BUNDLE_URL="https://output.circle-artifacts.com/output/job/${CIRCLE_WORKFLOW_JOB_ID}/artifacts/${CIRCLE_NODE_INDEX}/earthfast-bundle.tgz"
             else
               echo "Checksum file not found at $CHECKSUM_PATH"
             fi
