--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -236,12 +236,23 @@ jobs:
             echo "Listing current directory contents:"
             ls -la
 
-            bundle_filename="$(npx --package=earthfast-cli@0.6.0 --yes earthfast bundle create earthfast-bundle .)"
-            checksum="$(npx --package=earthfast-cli@0.6.0 --yes earthfast bundle checksum $bundle_filename)"
-            echo $checksum > ~/project/repository/checksum
+            # Install earthfast-cli from the specific branch
+            echo "Installing earthfast-cli..."
+            npm install github:earthfast/earthfast-cli#vss/rename-non-contract-armada
+
+            # Create the bundle
+            echo "Creating bundle..."
+            bundle_filename=$(npx earthfast-cli bundle create earthfast-bundle .)
             echo "Bundle Filename: $bundle_filename"
+
+            # Generate checksum
+            echo "Generating checksum..."
+            checksum=$(npx earthfast-cli bundle checksum "$bundle_filename")
             echo "Checksum: $checksum"
-            mv earthfast-bundle.tgz ~/project/earthfast-bundle.tgz
+            echo "$checksum" > ~/project/repository/checksum
+
+            # Move the bundle file
+            mv "$bundle_filename" ~/project/earthfast-bundle.tgz
 
       # store artifacts in circleci for download
       - store_artifacts:
