--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -238,25 +238,33 @@ jobs:
 
             # Install earthfast-cli from the specific branch
             echo "Installing earthfast-cli..."
-            npm install github:earthfast/earthfast-cli#vss/rename-non-contract-armada
+            git clone --depth=1 -b vss/rename-non-contract-armada https://github.com/earthfast/earthfast-cli.git ~/earthfast-cli
+            cd ~/earthfast-cli
+            npm install
 
-            # Create the bundle
+            # Attempt to create the bundle
             echo "Creating bundle..."
-            bundle_filename=$(npx earthfast-cli bundle create earthfast-bundle .)
-            echo "Bundle Filename: $bundle_filename"
+            npm run run -- bundle create earthfast-bundle ~/project/repository/${OUTPUT_DIR}
 
-            # Generate checksum
-            echo "Generating checksum..."
-            checksum=$(npx earthfast-cli bundle checksum "$bundle_filename")
-            echo "Checksum: $checksum"
-            echo "$checksum" > ~/project/repository/checksum
+            # Check if the bundle was created
+            if [ -f earthfast-bundle.tgz ]; then
+              echo "Bundle created successfully."
+              
+              echo "Generating checksum..."
+              checksum=$(npx earthfast bundle checksum earthfast-bundle.tgz)
+              echo "Checksum: $checksum"
+              echo "$checksum" > ~/project/repository/checksum
 
-            # Move the bundle file
-            mv "$bundle_filename" ~/project/earthfast-bundle.tgz
+              # Move the bundle file
+              mv earthfast-bundle.tgz ~/project/earthfast-bundle.tgz
+            else
+              echo "Bundle creation failed. Unable to proceed with checksum generation."
+              exit 1
+            fi
 
       # store artifacts in circleci for download
       - store_artifacts:
-          path: earthfast-bundle.tgz
+          path: ~/project/earthfast-bundle.tgz
       - store_artifacts:
           path: ~/project/repository/checksum
       - run:
