--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -163,6 +163,22 @@ jobs:
                   fi
 
       - run:
+          name: Check for index.html
+          working_directory: ~/project/repository
+          command: |
+            OUTPUT_DIR=.
+            if [ -n "<< pipeline.parameters.OUTPUT_DIR >>" ]; then
+              OUTPUT_DIR="<< pipeline.parameters.OUTPUT_DIR >>"
+            fi
+
+            if [ -f "$OUTPUT_DIR/index.html" ]; then
+              echo "index.html found in $OUTPUT_DIR"
+            else
+              echo "Error: index.html not found in $OUTPUT_DIR"
+              exit 1
+            fi
+
+      - run:
           name: Create earthfast release
           working_directory: ~/project/repository
           command: |
