--- a/.github/workflows/mirror-private-repo.yml
+++ b/.github/workflows/mirror-private-repo.yml
@@ -19,17 +19,13 @@ jobs:
         fetch-depth: 0  # Fetch all history for all branches and tags
 
     - name: Push to private repository
-      env:
-        SOURCE_REPO: "earthfast/dashboard-runner"
-        TARGET_REPO: ${{ secrets.TARGET_PRIVATE_MIRROR_REPO }}
-        GITHUB_PAT: ${{ secrets.GH_PAT }}
       run: |
         # Configure Git
         git config user.name github-actions
         git config user.email github-actions@github.com
 
         # Add target remote
-        git remote add target "https://${GH_PAT}@github.com/${TARGET_REPO}.git"
+        git remote add target "https://${{ secrets.GH_PAT }}@github.com/${{ secrets.TARGET_PRIVATE_MIRROR_REPO }}.git"
 
         # Push all branches
         git push target --all --force
