--- a/.github/workflows/mirror-private-repo.yml
+++ b/.github/workflows/mirror-private-repo.yml
@@ -28,10 +28,10 @@ jobs:
         git --version
 
         # Debug: Print target repo URL (masking the token)
-        echo "Target repo: https://******@github.com/${{ secrets.TARGET_PRIVATE_MIRROR_REPO }}.git"
+        echo "Target repo: https://******@github.com/earthfast/dashboard-runner-private.git"
 
         # Add target remote
-        git remote add target "https://${{ secrets.GH_PAT }}@github.com/${{ secrets.TARGET_PRIVATE_MIRROR_REPO }}.git"
+        git remote add target "https://${{ secrets.GH_PAT }}@github.com/earthfast/dashboard-runner-private.git"
 
         # Debug: List remotes
         git remote -v
