--- a/.github/workflows/mirror-private-repo.yml
+++ b/.github/workflows/mirror-private-repo.yml
@@ -19,6 +19,8 @@ jobs:
         fetch-depth: 0  # Fetch all history for all branches and tags
 
     - name: Push to private repository
+      env:
+        GH_TOKEN: ${{ secrets.GH_PAT }}
       run: |
         # Configure Git
         git config user.name github-actions
@@ -28,21 +30,25 @@ jobs:
         git --version
 
         # Debug: Print target repo URL (masking the token)
-        echo "Target repo: https://******@github.com/earthfast/dashboard-runner-private.git"
+        echo "Target repo: https://github.com/earthfast/dashboard-runner-private.git"
 
-        # Add target remote
-        git remote add target "https://${{ secrets.GH_PAT }}@github.com/earthfast/dashboard-runner-private.git"
+        # Debug: Check if GH_PAT is set
+        if [ -z "$GH_TOKEN" ]; then
+          echo "Error: GH_PAT is not set"
+          exit 1
+        fi
 
-        # Debug: List remotes
-        git remote -v
+        # Clone the private repository
+        gh repo clone earthfast/dashboard-runner-private /tmp/private-repo || echo "Failed to clone target repository"
 
-        # Debug: Test connection
-        git ls-remote target || echo "Failed to connect to target repository"
+        # If clone successful, push to the private repository
+        if [ -d "/tmp/private-repo" ]; then
+          cd /tmp/private-repo
+          git push --mirror https://github.com/earthfast/dashboard-runner.git
+          echo "Repository mirrored successfully!"
+        else
+          echo "Failed to clone the target repository. Check your GH_PAT permissions."
+        fi
 
-        # Push all branches
-        git push target --all --force || echo "Push failed"
-
-        # Push all tags
-        git push target --tags --force || echo "Tag push failed"
-
-        echo "Repository mirrored successfully!"
+        # Debug: Check GitHub API rate limit
+        curl -s -H "Authorization: token $GH_TOKEN" https://api.github.com/rate_limit
