--- a/.github/workflows/mirror-private-repo.yml
+++ b/.github/workflows/mirror-private-repo.yml
@@ -38,13 +38,15 @@ jobs:
           exit 1
         fi
 
-        # Clone the private repository
-        gh repo clone earthfast/dashboard-runner-private /tmp/private-repo || echo "Failed to clone target repository"
+        # Clone the private repository using GH_TOKEN
+        git clone https://${GH_TOKEN}@github.com/earthfast/dashboard-runner-private.git /tmp/private-repo || echo "Failed to clone target repository"
 
         # If clone successful, push to the private repository
         if [ -d "/tmp/private-repo" ]; then
           cd /tmp/private-repo
-          git push --mirror https://github.com/earthfast/dashboard-runner.git
+          git remote add source https://${GH_TOKEN}@github.com/earthfast/dashboard-runner.git
+          git fetch source --tags
+          git push --mirror source
           echo "Repository mirrored successfully!"
         else
           echo "Failed to clone the target repository. Check your GH_PAT permissions."
