--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,6 +35,9 @@ parameters:
     type: string
     default: "default"
     enum: ["default", "development", "staging", "sepolia-staging"]
+  GITHUB_ACCESS_TOKEN:
+    type: env_var_name
+    default: GITHUB_ACCESS_TOKEN
 
 jobs:
   publish:
@@ -92,9 +95,17 @@ jobs:
               - equal: ["<< pipeline.parameters.SOURCE_TYPE >>", "github"]
           steps:
             - run:
-                name: Clone repository from URL
+                name: Clone repository
                 command: |
-                  git clone "<< pipeline.parameters.REPOSITORY >>.git" ~/project/repository
+                  REPO_URL="<< pipeline.parameters.REPOSITORY >>"
+                  REPO_PATH=$(echo $REPO_URL | sed 's#https://github.com/##')
+                  
+                  if [ -n "${<< parameters.GITHUB_ACCESS_TOKEN >>}" ]; then
+                    git clone "https://${<< parameters.GITHUB_ACCESS_TOKEN >>}@github.com/${REPO_PATH}" ~/project/repository
+                  else
+                    git clone "$REPO_URL" ~/project/repository
+                  fi
+                  
                   cd ~/project/repository
                   if [ -n "<< pipeline.parameters.REF >>" ]; then
                     git checkout "<< pipeline.parameters.REF >>"
