--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -100,17 +100,10 @@ jobs:
                   REPO_URL="<< pipeline.parameters.REPOSITORY >>"
                   REPO_PATH=$(echo $REPO_URL | sed 's#https://github.com/##')
                   
-                  if [ -n "${<< pipeline.parameters.GITHUB_ACCESS_TOKEN >>}" ]; then
-                    git clone "https://${<< pipeline.parameters.GITHUB_ACCESS_TOKEN >>}@github.com/${REPO_PATH}" ~/project/repository
+                  if [ -n "<< pipeline.parameters.GITHUB_ACCESS_TOKEN >>" ]; then
+                    git clone "https://<< pipeline.parameters.GITHUB_ACCESS_TOKEN >>@github.com/${REPO_PATH}" ~/project/repository
                   else
                     git clone "$REPO_URL" ~/project/repository
-                  fi
-                  
-                  cd ~/project/repository
-                  if [ -n "<< pipeline.parameters.REF >>" ]; then
-                    git checkout "<< pipeline.parameters.REF >>"
-                  else
-                    echo "No branch specified, staying on default branch."
                   fi
             - run:
                 name: Run build command
